--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,18 @@
 name: dartus
-description: Dart implementation of the Walrus blob storage SDK with API parity to the Swift version.
+description: Dart SDK for Walrus decentralized blob storage with caching, streaming, and authentication.
 version: 0.1.0
-publish_to: none
+repository: https://github.com/Immadominion/Dartus
+homepage: https://github.com/Immadominion/Dartus
 
 environment:
   sdk: ">=3.9.2 <4.0.0"
 
 dependencies:
-  crypto: ^3.0.6
+  crypto: ^3.0.7
   meta: ^1.16.0
 
 dev_dependencies:
   lints: ^5.0.0
   test: ^1.25.2
+  mockito: ^5.4.4
+  build_runner: ^2.4.0
